--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=lab1
 spring.datasource.password=1
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-data-demo-today
 spring.datasource.username=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=true
@@ -10,3 +10,11 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 server.port=8080
+
+#Add those to application.properties to turn on spring transaction debug
+logging.level.ROOT=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+
+#In query user should be inside double quote, solved by adding below config in application.properties
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
